sandbox-metadata/templates/mongo-express.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mongo-express
  namespace: sandbox
spec:
  rules:
  - host: mongo-express.ghga-dev.de
    http:
      paths:
      - backend:
          serviceName: mongo-express
          servicePort: 8081
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mongo-express.ghga-dev.de
  - secretName: mongo-express-tls
